[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
futures = "0.3.15"

